# mcp_server_inference

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pocket_Molecule_Disease_Service.py  gas_properties_service.py  main.py  molecule_search_service.py  pocket_disease_service.py  pyproject.toml  run.sh  run_all_services.sh  run_gas_properties_service.sh  run_molecule_search_service.sh  run_pocket_disease_service.sh  test.py
.github/workflows/: CI.yaml
structs/: admet.py  base.py  pk.py  tool_structs.py  toxscan.py
test/: config.py  mcp_client.py
tools/: base.py
